--- a/app/src/main/res/layout/activity_appinstall_loading.xml
+++ b/app/src/main/res/layout/activity_appinstall_loading.xml
@@ -97,6 +97,20 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="10dp"/>
 
+        <!-- 스피너 -->
+        <ProgressBar
+            android:id="@+id/image_loading_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone"
+            android:layout_alignTop="@id/kakao_app_image"
+            android:layout_alignBottom="@id/kakao_app_image"
+            android:layout_alignStart="@id/kakao_app_image"
+            android:layout_alignEnd="@id/kakao_app_image"
+            android:progressDrawable="@drawable/kakao_logo_progress_bar"
+            />
+
 
         <!-- 앱 이름 텍스트 -->
         <TextView
@@ -112,13 +126,13 @@
 
         <!-- 설치 버튼 -->
         <Button
-            android:id="@+id/kakao_install_btn"
+            android:id="@+id/kakao_cancel_btn"
             android:layout_width="68dp"
             android:layout_height="44dp"
-            android:text="설치"
-            android:textColor="@color/white"
+            android:text="취소"
+            android:textColor="#0B57CF"
             android:textSize="16sp"
-            android:background="@drawable/install_kakao_rounded_blue_btn_background"
+            android:background="@drawable/install_kakao_rounded_white_btn_background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginStart="330dp"
@@ -126,20 +140,6 @@
             android:layout_marginTop="4dp"
             android:layout_alignParentEnd="true"/>
 
-
-        <!-- 설치 버튼 아래 텍스트 -->
-        <TextView
-            android:id="@+id/kakao_install_btn_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="인앱 구매"
-            android:textColor="#434746"
-            android:textSize="10sp"
-            app:layout_constraintTop_toBottomOf="@id/kakao_install_btn"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="50dp"
-            android:layout_marginStart="348dp"
-            android:layout_marginEnd="10dp"/>
 
         <!-- 앱 설명 텍스트 -->
         <TextView
@@ -150,22 +150,10 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:layout_toEndOf="@id/kakao_app_image"
-            android:text="Kakao Corp."
+            android:text="대기 중..."
             android:textColor="#1F1F1F"
             android:textSize="15sp" />
 
-        <!-- 앱 설명 텍스트2 -->
-        <TextView
-            android:id="@+id/kakao_info_text2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/kakao_info_text"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_toEndOf="@id/kakao_app_image"
-            android:text="광고 포함"
-            android:textColor="#454746"
-            android:textSize="14sp" />
 
         <RelativeLayout
             android:id="@+id/kakao_review_layout"
