--- a/app/src/main/res/layout/activity_appinstall_loading.xml
+++ b/app/src/main/res/layout/activity_appinstall_loading.xml
@@ -97,6 +97,16 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="10dp"/>
 
+        <!-- 앱 이미지 -->
+        <ImageView
+            android:id="@+id/after_kakao_app_image"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:visibility="invisible"
+            android:src="@drawable/ic_install_kakao_down_line1"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="10dp"/>
+
         <!-- 스피너 -->
         <ProgressBar
             android:id="@+id/image_loading_spinner"
@@ -140,6 +150,22 @@
             android:layout_marginTop="4dp"
             android:layout_alignParentEnd="true"/>
 
+        <!-- 열기 버튼 -->
+        <Button
+            android:id="@+id/after_kakao_install_btn"
+            android:layout_width="68dp"
+            android:layout_height="44dp"
+            android:text="열기"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:visibility="invisible"
+            android:background="@drawable/install_kakao_rounded_blue_btn_background"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="330dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="4dp"
+            android:layout_alignParentEnd="true"/>
 
         <!-- 앱 설명 텍스트 -->
         <TextView
