--- a/app/src/main/res/layout/activity_default_phone_add.xml
+++ b/app/src/main/res/layout/activity_default_phone_add.xml
@@ -66,6 +66,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/name_edittext"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="60dp"
