--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,33 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0E5BDF"
+    android:background="#DADADA"
     tools:context=".MainActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="380dp"
+        android:layout_marginTop="360dp"
         android:orientation="vertical"
-        android:paddingLeft="100dp"
-        android:paddingRight="100dp"
+        android:paddingLeft="40dp"
+        android:paddingRight="40dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <EditText
             android:id="@+id/editTextId"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_gravity="center"
-            android:backgroundTint="#FFFFFF"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/border_background13"
             android:ems="10"
-            android:hint="아이디"
+            android:hint="아이디를 입력해주세요."
             android:inputType="text"
             android:paddingLeft="9dp"
-            android:textColor="#FFFFFF"
-            android:textColorHint="#8DFFFFFF"
+            android:scrollbarAlwaysDrawHorizontalTrack="true"
+            android:textColor="#8D838383"
+            android:textColorHint="#8D838383"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -38,57 +41,71 @@
         <EditText
             android:id="@+id/editTextPassword"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_marginTop="11dp"
-            android:layout_marginBottom="70dp"
-            android:backgroundTint="#FFFFFF"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/border_background13"
             android:ems="10"
-            android:hint="비밀번호"
+            android:hint="비밀번호를 입력해주세요."
             android:inputType="textPassword"
             android:paddingLeft="8dp"
-            android:textColor="#FFFFFF"
-            android:textColorHint="#8DFFFFFF"
+            android:textColor="#8D838383"
+            android:textColorHint="#8D838383"
             app:layout_constraintBottom_toTopOf="@+id/btnLogin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextId" />
+
+        <Button
+            android:id="@+id/btnFindIdPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="10dp"
+            android:backgroundTint="#B3B3B3"
+            android:text="아이디/비밀번호 찾기" />
     </LinearLayout>
 
-    <FrameLayout
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="35dp"
+        android:layout_marginBottom="60dp"
+        android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+        app:layout_constraintVertical_bias="0.228">
 
-        <ImageButton
+
+        <Button
             android:id="@+id/btnLogin"
-            android:layout_width="wrap_content"
-            android:layout_height="80dp"
-            android:layout_marginBottom="20dp"
-            android:layout_gravity="center"
-            android:background="#00FF0000"
-            app:srcCompat="@drawable/ic_wifi_black" />
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:background="#FFFFFF"
+            android:padding="5dp"
+            android:text="로그인" />
 
         <Button
             android:id="@+id/btnRegister"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:layout_gravity="center|bottom"
-            android:backgroundTint="#00FF0000"
+            android:layout_marginTop="10dp"
+            android:background="#FFFFFF"
             android:padding="5dp"
             android:text="회원가입" />
-    </FrameLayout>
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="20dp"
         android:src="@drawable/ic_launcher_foreground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
