--- a/app/src/main/res/drawable/edu_bottom_dialog_bg.xml
+++ b/app/src/main/res/drawable/edu_bottom_dialog_bg.xml
@@ -2,18 +2,15 @@
 <layer-list
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape
-            android:shape="rectangle">
-            <solid android:color="@color/semi_transparent_black"/>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/transparent_black_50"/>
             <corners
                 android:topLeftRadius="20dp"
                 android:topRightRadius="20dp"/>
         </shape>
     </item>
-    <item
-        android:top="5dp">
-        <shape
-            android:shape="rectangle">
+    <item android:top="5dp">
+        <shape android:shape="rectangle">
             <solid android:color="@color/white"/>
             <corners
                 android:topLeftRadius="20dp"
