--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,8 @@
     <color name="reddish_orange">#EF5650</color>
     <color name="white">#FFFFFF</color>
 
-    <color name="semi_transparent_black">#80000000</color>
+    <color name="transparent_black_50">#80000000</color>
+    <color name="transparent_black_25">#40000000</color>
     <color name="todo">#0096FF</color>
     <color name="transparency">#00000000</color>
 
