계정생성 교육코스 완료

--- a/app/src/main/res/layout/activity_google_login.xml
+++ b/app/src/main/res/layout/activity_google_login.xml
@@ -93,10 +93,10 @@
             android:id="@+id/guest_code_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="내 컴퓨터가 아닌가요? 시크릿 브라우저 창을 사용하여 로&#10;그인하세요. 게스트 코드 사용 방법 자세히 알아보기"
+            android:text="내 컴퓨터가 아닌가요? 시크릿 브라우저 창을 사용하여 로그인하세요. 게스트 코드 사용 방법 자세히 알아보기"
             android:textSize="14sp"
             android:bufferType="spannable"
-            android:textColor="#1B76EB"
+            android:textColor="#808080"
             app:layout_constraintTop_toBottomOf="@+id/forgot_email_text"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="40dp"
