--- a/app/src/main/res/layout/activity_google_mail.xml
+++ b/app/src/main/res/layout/activity_google_mail.xml
@@ -48,6 +48,7 @@
             android:text="Gmail 주소를 선택하거나 새 Gmail 주소를 만드세요."
             android:textSize="16sp"
             android:textColor="#202022"
+            android:gravity="center"
             app:layout_constraintTop_toBottomOf="@+id/google_mail_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -179,7 +180,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#808080"
-            android:text="문자, 숫자, 마침표를 사용할 수 있습니다"
+            android:text="          문자, 숫자, 마침표를 사용할 수 있습니다"
             android:visibility="gone"
             app:layout_constraintTop_toBottomOf="@id/new_mail_address_edittext"
             app:layout_constraintStart_toStartOf="parent"
