--- a/app/src/main/res/layout/activity_google_get_code.xml
+++ b/app/src/main/res/layout/activity_google_get_code.xml
@@ -22,11 +22,9 @@
             android:layout_height="60dp"
             android:src="@drawable/googlelogo"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/google_secure_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="30dp"
-            />
+            android:layout_marginTop="30dp"/>
 
         <!-- "보안문자 입력" 텍스트 -->
         <TextView
@@ -39,7 +37,7 @@
             app:layout_constraintTop_toBottomOf="@+id/get_google_logo"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="0dp"/>
+            android:layout_marginTop="10dp"/>
 
         <!-- 휴대전화로 인증 코드 받기 텍스트 -->
         <TextView
@@ -53,19 +51,21 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="30dp"
-            android:layout_marginEnd="184dp"/>
+            android:layout_marginEnd="100dp"
+            android:layout_alignParentStart="true"/>
 
-
+        <!-- 드롭다운 화살표 -->
         <ImageView
             android:id="@+id/dropdown_arrow"
             android:layout_width="10dp"
             android:layout_height="10dp"
             android:src="@drawable/ic_dropdown_arrow"
             app:layout_constraintTop_toBottomOf="@id/google_phone_text"
-            app:layout_constraintEnd_toStartOf="@id/phone_edittext"
-            android:layout_marginTop="44dp"
-            android:layout_marginEnd="32dp"/>
+            app:layout_constraintStart_toEndOf="@id/korean_flag_image"
+            android:layout_marginTop="32dp"
+            android:layout_marginStart="8dp"/>
 
+        <!-- 한국 국기 이미지 -->
         <ImageView
             android:id="@+id/korean_flag_image"
             android:layout_width="30dp"
@@ -73,14 +73,14 @@
             android:src="@drawable/korean_flag"
             app:layout_constraintTop_toBottomOf="@id/google_phone_text"
             app:layout_constraintEnd_toStartOf="@id/phone_edittext"
-            android:layout_marginTop="28dp"
-            android:layout_marginEnd="52dp"/>
-
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="26dp"
+            android:layout_alignParentStart="true"/>
 
         <!-- 전화번호 에딧텍스트 -->
         <EditText
             android:id="@+id/phone_edittext"
-            android:layout_width="270dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:hint="전화번호"
             android:inputType="number"
@@ -88,13 +88,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/google_phone_text"
-            android:layout_marginStart="120dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
             android:paddingTop="12dp"
-            android:paddingBottom="12dp"/>
+            android:paddingBottom="12dp"
+            android:layout_alignParentEnd="true"/>
 
         <!-- "Google에서 SMS(요금이 부과될 수 있음)를 통해 전화번호를 확인합니다." 텍스트 -->
         <TextView
@@ -111,12 +111,11 @@
             android:layout_marginEnd="16dp"
             android:layout_marginTop="40dp"/>
 
-
         <!-- "다음" 버튼 -->
         <Button
             android:id="@+id/pw_next_button"
-            android:layout_width="85dp"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="다음"
             android:background="@drawable/blue_rounded_button"
             android:textColor="@color/white"
@@ -124,7 +123,5 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="36dp"
             android:layout_marginEnd="16dp"/>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </FrameLayout>
