--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/bgColor1"
     tools:context=".MyProfileFragment">
     <LinearLayout
@@ -191,4 +192,3 @@
         </LinearLayout>
     </LinearLayout>
 </FrameLayout>
-
